force-app/main/default/objects/custom_create315__c/custom_create315__c.object-meta.xml
<CustomObject>
    <label>Custom created object315</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects315</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>