force-app/main/default/objects/custom_create315__c/fields/custom_create_315field586__c.field-meta.xml
<CustomField>
    <fullName>custom_create_315field586__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 315field586</label>
    <type>Checkbox</type>
</CustomField>